syntax = "proto3";

package users;

service Users {
  rpc Hello (HelloRequest) returns (HelloResponse);
  rpc CreateUser (User) returns (NoResponse);
}

message HelloRequest {
  string msg = 1;
}

message HelloResponse {
  string msg = 1;
}

message NoResponse {
}

message User {
  string id = 1;
  string username = 2;
  string full_name = 3;
  string password = 4;
}
